--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "build": "babel src --out-dir dist",
     "start": "node dist/app.js",
-    "dev": "nodemon --exec 'npm run build && node dist/app.js'",
-    "watch": "babel src --out-dir dist --watch"
+    "dev": "nodemon app.js'",
+    "watch": "babel src --out-dir dist --watch",
+    "seed": "node src/prisma/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "@prisma/client": "^7.1.0",
     "babel": "^6.23.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
@@ -29,6 +33,9 @@
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
-    "nodemon": "^3.1.11"
+    "@types/node": "^24.10.2",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
