--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
+    "postinstall": "prisma generate --no-engine",
     "build": "babel src --out-dir dist",
     "start": "node dist/app.js",
     "dev": "nodemon app.js'",
