--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "postinstall": "prisma generate --no-engine",
+    "postinstall": "prisma generate",
     "build": "babel src --out-dir dist",
     "start": "node dist/app.js",
     "dev": "nodemon app.js'",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@vercel/blob": "^2.0.0",
     "babel": "^6.23.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
