--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postinstall": "prisma generate",
     "build": "babel src --out-dir dist",
-    "start": "node dist/app.js",
+    "start": "node src/app.js",
     "dev": "nodemon app.js'",
     "watch": "babel src --out-dir dist --watch",
     "seed": "node src/prisma/seed.js"
