--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@vercel/blob": "^2.0.0",
+    "adm-zip": "^0.5.16",
     "babel": "^6.23.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -29,7 +31,8 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
-    "redis": "^5.10.0"
+    "redis": "^5.10.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
