--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "prisma generate",
     "build": "babel src --out-dir dist",
     "start": "node src/app.js",
-    "dev": "nodemon app.js'",
+    "dev": "nodemon --watch src --ignore uploads --ignore uploads/** app.js",
     "watch": "babel src --out-dir dist --watch",
     "seed": "node src/prisma/seed.js"
   },
@@ -20,6 +20,7 @@
     "@prisma/client": "^7.1.0",
     "@vercel/blob": "^2.0.0",
     "adm-zip": "^0.5.16",
+    "await-busboy": "^1.0.3",
     "babel": "^6.23.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
