--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "mime-types": "^3.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prisma": "^7.1.0",
